unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/LeanData__Campaign_Influence_Summary__c.object-meta.xml
<CustomObject>
    <label>Campaign Influence Summary</label>
    <nameField>
        <displayFormat>CIS-{000000000}</displayFormat>
        <label>Campaign Influence Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Influence Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>