unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__Campaign__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Influence Summaries</relationshipLabel>
    <relationshipName>Campaign_Influence_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>