unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__Existing_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Existing_Opportunity_Amount__c</fullName>
    <label>Existing Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>