unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__No_Results__c.field-meta.xml
<CustomField>
    <fullName>LeanData__No_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Results</label>
    <type>Checkbox</type>
</CustomField>