unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__Number_of_Existing_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Number_of_Existing_Opportunities__c</fullName>
    <label>Number of Existing Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>