unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__objectType__c.field-meta.xml
<CustomField>
    <fullName>LeanData__objectType__c</fullName>
    <label>objectType ( Deprecated )</label>
    <length>200</length>
    <type>Text</type>
</CustomField>