unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__Run_Parameters__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Run_Parameters__c</fullName>
    <label>Run Parameters</label>
    <type>TextArea</type>
</CustomField>