unpackaged/main/default/objects/LeanData__Campaign_Influence_Summary__c/fields/LeanData__Total_Campaign_Member_Attribution__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Total_Campaign_Member_Attribution__c</fullName>
    <label>Total Campaign Member Attribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>